# llm-knowledge

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: final_plots.ipynb
src/llm_knowledge/: model.py
